Fix `word-wrap`

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,6 +124,10 @@
 	align-items: center;
 }
 
+.prose blockquote a {
+	word-wrap: break-word;
+}
+
 .prose .yt-embed {
 	position: relative;
 	padding-bottom: 56.25%;
